--- a/templates/index.html
+++ b/templates/index.html
@@ -123,13 +123,13 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.pepcoding.com" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.codecademy.com" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="http://blog.aaobihar.com/wp-content/uploads/2015/03/Holi-HD-Photo.jpg" class="img-responsive" alt="Circus tent">
+                        <img src="https://images.codecademy.com/social/logo-codecademy-social.png" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
